--- a/index.html
+++ b/index.html
@@ -1,58 +1,118 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "chimuelo", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Reuniones discretas</title>
-<meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
-<script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
-<script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
-<script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
-<script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
-<link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
+<title>🔥 Fotos Discretas y Privadas 🔥</title>
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Galería de fotos</title>
-<div class="layer">
-</div>
-<div class="wrap">
-<div class="step-block">
-<div class="logo">
-<img src="https://i.imgur.com/sZdtUEq.png" alt="">
-</div>
-<div class="step-item" style="display: block;">
-<div class="question-title ">
-Llegamos a tu domicilio por la noche, servicio disponible en toda la ciudad, ¿quieres ver mi catálogo?
-</div>
-<div class="buttons-block">
-<div class="step-btn no-btn tr-next-button tr-b-option">
-Si
-</div>
-</div>
-</div>
-<div class="step-item thishide" style="display: none;">
-<div class="question-title ">
-¡CUIDADOSO! ¿Estás de acuerdo en respetar a las mujeres que conoces? Si conoces a alguien no se lo digas a nadie y no difundas rumores...
-</div>
-<p>
-<b style="color: red;">
-</b>
-</p>
-<div class="buttons-block">
-<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Chimuelo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ACEPTA
-</a>
-</div>
-</div>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #111;
+    color: #fff;
+    overflow-x: hidden;
+  }
+
+  video#VideoBg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  .step-item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background: rgba(0,0,0,0.6);
+    padding: 30px;
+    border-radius: 15px;
+    max-width: 400px;
+    animation: fadeIn 1.5s ease;
+  }
+
+  .question-title {
+    font-size: 1.8em;
+    margin-bottom: 20px;
+    animation: bounce 1s infinite alternate;
+  }
+
+  .step-btn {
+    display: inline-block;
+    background: linear-gradient(90deg,#ff4d6d,#ffb347);
+    color: #fff;
+    padding: 15px 30px;
+    margin-top: 10px;
+    font-size: 1.2em;
+    text-decoration: none;
+    border-radius: 50px;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .step-btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px #ff4d6d;
+  }
+
+  @keyframes bounce {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+
+  .whos-counter {
+    margin-top: 15px;
+    font-size: 0.9em;
+    color: #ffb347;
+  }
+</style>
+<script>
+  // 🔒 Protección básica: bloquear clic derecho y selección
+  document.addEventListener('contextmenu', e => e.preventDefault());
+  document.addEventListener('keydown', function(e) {
+    // 🔒 Bloquear teclas para inspeccionar (F12, Ctrl+Shift+I, Ctrl+U)
+    if(e.key === 'F12' || (e.ctrlKey && e.shiftKey && e.key === 'I') || (e.ctrlKey && e.key === 'U')) {
+      e.preventDefault();
+      alert('🔒 Acceso restringido');
+    }
+  });
+  // 🔒 Deshabilitar arrastrar imágenes o video
+  document.addEventListener('dragstart', e => e.preventDefault());
+  // 🔒 Deshabilitar selección de texto
+  document.addEventListener('selectstart', e => e.preventDefault());
+</script>
+</head>
+<body>
+
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn77-vid-mp4.xvideos-cdn.com/NrI-9u_A9xGDFVqrq1cCLw==,1737966589/videos/mp4/7/2/5/xvideos.com_725b860aa69386510f8343555c9a0e59.mp4?ui=MTg2Ljg5LjI1MC40Ny05MjkzNTc0MTktL3ZpZGVvLm90aXZmaW05MmRlL2xhX3ZhcXVlcmFf" type="video/mp4">
+  <source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-5.mp4" type="video/mp4">
 </video>
-<script type="text/javascript">
-      /*<![CDATA[*/    (function(w){
-        w.backOfferUrl = ''    }
-                        (window));
-      /*]]>*/ 
+
+<div class="step-item">
+  <div class="question-title">👀 ¡Fotos discretas en la comodidad de tu hogar! 🔥</div>
+  <p>💌 Servicios privados solo para mayores de 18 años.</p>
+  <a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={ChimuAgain}&subid2={subid2}&clickid={clickid}" class="step-btn">✅ Sí, tengo +18 años</a>
+
+  <div class="whos-counter">
+    <script id="_wauchimu">
+      var _wau = _wau || [];
+      _wau.push(["dynamic", "chimu", "1ca", "ffffffffffff", "small"]);
+    </script>
+    <script async src="//waust.at/d.js"></script>
+  </div>
+</div>
+
 </body>
 </html>
